Fixed layout issue

--- a/_assets/scss/_custom.scss
+++ b/_assets/scss/_custom.scss
@@ -194,6 +194,9 @@ header .columns { padding: 0; }
 		position: absolute;
 		width: 100%;
 		height: 100%;
+		left: 50%;
+		top: 50%;
+		transform: translate(-50%, -50%);
 	}
 	.glowContainer {
 		min-width: 450px;
